- bugfix: potential abort with DA queue after high watermark is reached
  There exists a race condition that can lead to a segfault. Thanks
  go to vbernetr, who performed the analysis and provided patch, which
  I only tweaked a very little bit.
---------------------------------------------------------------------------
Version 4.1.6  [DEVEL] (rgerhards), 2009-03-??
- implemented function support in RainerScript. That means the engine
  parses and compile functions, as well as executes a few build-in
  ones. Dynamic loading and registration of functions is not yet
  supported - but we now have a good foundation to do that later on.
  NOTE: nested function calls are not yet supported due to a design
  issue with the function call VM instruction set design.
- implemented the strlen() RainerScript function
- added a template output module
- added -T rsyslogd command line option, enables to specify a directory
  where to chroot() into on startup. This is NOT a security feature but
  introduced to support testing. Thus, -T does not make sure chroot()
  is used in a secure way. (may be removed later)
- added omstdout module for testing purposes. Spits out all messages to
  stdout - no config option, no other features
- added a parser testing suite (still needs to be extended, but a good
  start)
- modified $ModLoad statement so that for modules whom's name starts with
  a dot, no path is prepended (this enables relative-pathes and should
  not break any valid current config)
- fixed a bug that caused action retries not to work correctly
  situation was only cleared by a restart
- bugfix: closed dynafile was potentially never written until another
  dynafile name was generated - potential loss of messages
- improved omfile so that it properly suspends itself if there is an
  i/o or file name generation error. This enables it to be used with
  the full high availability features of rsyslog's engine
- bugfix: fixed some segaults on Solaris, where vsprintf() does not