@@ -1,3 +1,6 @@
+- new feature: new output plugin omprog, which permits to start program
+  and feed it (via its stdin) with syslog messages. If the program
+  terminates, it is restarted.
 - bugfix: potential abort with DA queue after high watermark is reached
   There exists a race condition that can lead to a segfault. Thanks
   go to vbernetr, who performed the analysis and provided patch, which
